    - Changed Vanadium-oxide modular batteries to be 2x2.
    - Buffed Modular armor's grid size to 7x7, Power armors to 10x10 and Power armor MK2's to 15x15.
    - Buffed Spidertron's equipmen grid to 14x8.
    - Changed Polonium reactors neighbour bonus to 25%.
    - Buffed max length of the max tier undergrounds to 12.
    - Deleted chalk.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.
    - Fixed a lot of minor locale issues, like capatalisation and random bs like that.
    - Fixed the burn-inator being unlocked twice.
    - Fixed the stainless steel tank not actually taking.. stainless steel.
    - Fixed mining productivity and research speed not being unlocked by their respective tech trees.
    - Fixed rubidium's ratios being fucked in comparison to the amount needed in science.
    - FINALLY MADE ACID PLANTS LOOK DIFFERENT OH MY GOD
    - Fixed the vanadium modular battery technologies not having the correct color.
    - Fixed the vanadium modular batterie MK2's recipe.

---------------------------------------------------------------------------------------------------
Version: 0.5.133
  The why couldnt assembling machines just have more fluid slots Update:

  Changes:
    - Changed lead and gallium ratios to be cheaper and smaller-scale in comparison to the amount needed for science.
    - Made the Reactive-Non Metal pack more expensive.

  Fixes:
    - Fixed plastic Reactive-Non Metal pack recipe using nitrogen instead of chlorine.
