@@ -3482,7 +3482,7 @@ data:extend({
     icon = "__periodic-madness__/graphics/icons/placeholder-tech.png",
     effects =
     {
-      PM.unlock_recipe("germanium-ore-concentrate"),
+      PM.unlock_recipe("pm-germanium-ore-concentrate"),
       PM.unlock_recipe("pm-concentrate-seperation"),
       PM.unlock_recipe("pm-germanium-sulfide-to-oxide"),
       PM.unlock_recipe("pm-germanium-oxide-to-tetrachloride"),
